# NotSoLethalCompany

./: .gitignore  CMakeLists.txt  README.md
include/: esp.h  util.h
lib/MinHook/include/: MinHook.h
lib/logger/include/: logger.h
src/: esp.c  gui.c  main.c  util.c
